--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -9,7 +9,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/home.css">
     <title>Editor de código</title>
+    <script src="/socket.io/socket.io.js"></script>
+    <script defer type="text/javascript" src="/js/editors/html.js"></script>
+    <script defer type="text/javascript" src="/js/editors/css.js"></script>
+    <script defer type="text/javascript" src="/js/editors/javascript.js"></script>
+    <script defer type="text/javascript" src="/js/editors/script.js"></script>
+    <script defer type="text/javascript" src="/js/editors/style.js"></script>
     <script defer type="text/javascript" src="/js/editor.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jshint/2.13.6/jshint.min.js" integrity="sha512-MCUpdWtSMK1rm+4sWFpfFuz4UTpXEud5p236Otyw1Ea4kdVyNxy+eMHR76u7xfY5DlpDmOzgEhgDq1ZGLHqkCA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/htmlhint/dist/htmlhint.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js" integrity="sha512-8RnEqURPUc5aqFEN04aQEiPlSAdE0jlFS/9iGgUyNtwFnSKCXhmB6ZTNl7LnDtDWKabJIASzXrzD0K+LYexU9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/theme/material.min.css" integrity="sha512-jA21084nir3cN96YuzJ1DbtDn30kxhxqQToAzCEGZcuRAswWfYirpUu8HVm8wRNoWDCYtA4iavd2Rb1bQSLv7g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css" integrity="sha512-uf06llspW44/LZpHzHT6qBOIVODjWtv4MxCricRxkzvopAlSWnTf6hpZTFxuuZcuNE9CBQhqE0Seu1CoRk84nQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -35,11 +47,22 @@
                 </div>
             </div>
             <div class="editors">
-                <textarea class="editor" name="html-editor" id="html-editor" placeholder="Ingresa tu código HTML aquí"></textarea>
-                <textarea class="editor" name="css-editor" id="css-editor" placeholder="Ingresa tu código CSS aquí"></textarea>
-                <textarea class="editor" name="js-editor" id="js-editor" placeholder="Ingresa tu código JavaScript aquí"></textarea>
-                <textarea class="editor" name="link-editor" id="link-editor" placeholder='<link rel="stylesheet" href="...."/>'></textarea>
-                <textarea class="editor" name="script-editor" id="script-editor" placeholder='<script type="text/javascript" src="...."></script>'></textarea>
+                <!-- <textarea class="editor" name="html-editor" id="html-editor" placeholder="Ingresa tu código HTML aquí"></textarea> -->
+                <div id="html-editor" class="editor">
+                    <textarea class="editor" name="html-editor" id="html-editor-textarea"></textarea>
+                </div>
+                <div id="css-editor" class="editor">
+                    <textarea class="editor" name="css-editor" id="css-editor-textarea"></textarea>
+                </div>
+                <div id="js-editor" class="editor">
+                    <textarea class="editor" name="js-editor" id="js-editor-textarea"></textarea>
+                </div>
+                <div id="link-editor" class="editor">
+                    <textarea class="editor" name="link-editor" id="link-editor-textarea"></textarea>
+                </div>
+                <div id="script-editor" class="editor">
+                    <textarea class="editor" name="script-editor" id="script-editor-textarea"></textarea>
+                </div>
             </div>
             <div class="editor-footer">
                 <div>
@@ -52,10 +75,20 @@
                         </span>
                     </span>
                 </div>
+                <script>
+                    
+                  </script>
                 <span id="run-js">Ejecutar >>></span>
             </div>
         </section>
         <iframe id="results"></iframe>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/htmlmixed/htmlmixed.min.js" integrity="sha512-HN6cn6mIWeFJFwRN9yetDAMSh+AK9myHF1X9GlSlKmThaat65342Yw8wL7ITuaJnPioG0SYG09gy0qd5+s777w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/xml/xml.min.js" integrity="sha512-LarNmzVokUmcA7aUDtqZ6oTS+YXmUKzpGdm8DxC46A6AHu+PQiYCUlwEGWidjVYMo/QXZMFMIadZtrkfApYp/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/htmlembedded/htmlembedded.min.js" integrity="sha512-nZlYJlXg6ZqhEdMELUCY9QpeUZHLZh9JUUe2wnHmEvFSWer2gxmDO4xeQ4QlRM1zMzeZsTdm5oFw2IGhsmmLlA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/hint/show-hint.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/hint/html-hint.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/css/css.min.js" integrity="sha512-rQImvJlBa8MV1Tl1SXR5zD2bWfmgCEIzTieFegGg89AAt7j/NBEe50M5CqYQJnRwtkjKMmuYgHBqtD1Ubbk5ww==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/javascript/javascript.min.js" integrity="sha512-I6CdJdruzGtvDyvdO4YsiAq+pkWf2efgd1ZUSK2FnM/u2VuRASPC7GowWQrWyjxCZn6CT89s3ddGI+be0Ak9Fg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
